reverting changes to pull earlier commit

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -56,6 +56,8 @@ body {
     display:flex;
     justify-content: center;
     align-items: center;
+    margin: 1px;
+    padding: 2px;
 }
 
 .startbtn:hover {
@@ -63,11 +65,13 @@ body {
     border-color:black;
 }
 
-#question {
+.question {
     display:flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px; 
+    margin-top: 10px;
+    margin: 50px;
+    font-size:22px;
 }
 
 .container {
