--- a/Assets/style.css
+++ b/Assets/style.css
@@ -117,6 +117,15 @@ body {
     align-content: baseline
 }
 
+#high-score {
+    display:flex;
+    justify-content: center;
+    height: 100%;
+    display:none;
+
+}
+
+
 .hide {
     display:none;
 }
